<resources>
    <string name="app_name">NewsFeed</string>
    <string name="action_settings">Settings</string>
    <string name="top_stories">Top Stories</string>
    <string name="latest_news">Latest News</string>
    <string name="science_news">Science</string>
    <string name="sports_news">Sports</string>
    <string name="entertainment_news">Entertainment</string>
    <string name="health_news">Health</string>
    <string name="energy_news">Energy Industry</string>
    <string name="security_news">Security Industry</string>
    <string name="news_feed">News Feed</string>
</resources>
